--- a/projeto.tex
+++ b/projeto.tex
@@ -10,9 +10,9 @@
 	%subsection=TITLE,	% títulos de subseções convertidos em letras maiúsculas
 	%subsubsection=TITLE,% títulos de subsubseções convertidos em letras maiúsculas
 	% -- opções do pacote babel --
-	english,			% idioma adicional para hifenização
-	french,				% idioma adicional para hifenização
-	spanish,			% idioma adicional para hifenização
+	% english,			% idioma adicional para hifenização
+	% french,				% idioma adicional para hifenização
+	% spanish,			% idioma adicional para hifenização
 	brazil				% o último idioma é o principal do documento
 	]{abntex2}
 
@@ -297,9 +297,7 @@ que tenho e que me estimam tanto. Em especial a Marcelo Montanha (meu irmão),
 Fernando Lima Fernandes, Michel Sunsin, Gabriel Naro, Caetano Ranieri, Luís
 Morais, Luís Paulo Jarussi, Felipe Leme e Victor Frascarelli por compartilharem
 os palcos comigo durante esses anos e à República Toca, por ter sido uma segunda
-casa e uma grande escola. Agradeço à Barbara Toscano Barali, pelo amor e pela
-amizade, por todos os momentos compartilhados e pela ajuda e força inestimáveis
-que me deu nos meus dias mais tristes. Agradeço a todos que sorriem ao se
+casa e uma grande escola. Agradeço a todos que sorriem ao se
 lembrar de mim e a todos que me fazem sorrir. \end{agradecimentos}
 % ---
 
